--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.body{
+  margin:-8px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.centered-flex-item{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.header{
+  display: flex;
+  justify-content: flex-end;
+  background-color: #4c5c70;
+  gap: 30px;
+  padding:20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-item{
+  font-size: 2.3vw;
+  font-weight: 600;
+  color: #Edf1f3;
+}
+
+.about{
+  background-color: #4c5c70;
+  margin:10px 5px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.about-photo{
+  height: 15vw;
+  width: auto;
+}
+
+.about-item{
+  width: 50%;
+}
+
+.name{
+  font-size: 4vw;
 }
