--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -9,38 +9,125 @@
   align-items: center;
 }
 
+.italic{
+  font-style: italic;
+}
+
 .header{
   display: flex;
   justify-content: flex-end;
-  background-color: #4c5c70;
   gap: 30px;
   padding:20px;
 }
 
 .header-item{
-  font-size: 2.3vw;
+  font-size: 2vw;
   font-weight: 600;
-  color: #Edf1f3;
+  color: #4c5c70;
+  animation:entranceDown 1s;
 }
 
 .about{
-  background-color: #4c5c70;
   margin:10px 5px;
   border-radius: 5px;
   display: flex;
   justify-content: space-evenly;
   padding: 20px;
+  color: #4c5c70;
+  border: 1px solid black;
+  height: 1000px;
 }
 
 .about-photo{
-  height: 15vw;
+  height: 25vw;
   width: auto;
+  animation: entranceRight 1s;
 }
 
 .about-item{
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content:  center;
 }
 
 .name{
   font-size: 4vw;
+  font-weight: 800;
+  margin-bottom: 20px;
+  animation-name:entranceLeft;
+  animation-duration: 1s;
+}
+
+.about-text{
+  text-align: justify;
+  animation: entranceLeft 1s;
+}
+
+.education-section{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.education-item-container{
+  display: flex;
+  gap:30px;
+}
+
+.education-item{
+  border: 5px solid #4c5c70;
+  border-radius: 10px;
+  padding:15px;
+  animation: entranceDown 1s;
+}
+
+.education-item-top>h3,p{
+  display: inline;
+}
+
+.education-item-duration{
+  margin-left: 20px;
+}
+
+.education-item-location{
+  margin:5px 0px;
+}
+
+.skills-learned-list{
+  margin:5px -20px;
+}
+
+@keyframes entranceLeft{
+  from{
+    transform: translateX(-30vw);
+    opacity: 0%;
+  }
+  to{
+    transform: translate(0);
+    opacity: 100%;
+  }
+}
+
+@keyframes entranceRight {
+  from{
+    transform: translateX(30vw);
+    opacity: 0%;
+  }
+  to{
+    transform: translate(0);
+    opacity: 100%;
+  }
+}
+
+@keyframes entranceDown {
+  from{
+    transform: translateY(-2vw);
+    opacity: 0%;
+  }
+  to{
+    transform: translate(0);
+    opacity: 100%;
+  }
+  
 }
