--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -10,6 +10,10 @@
   align-items: center;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 .italic{
   font-style: italic;
 }
@@ -27,10 +31,18 @@
   animation: entranceDown 1s;
 }
 
-
 .header-item{
   font-size: 30px;
   font-weight: 600;
+  text-decoration: none;
+  color:inherit;
+  transition: all 1s;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.header-item:hover{
+  background-color: #7C8FA6;
 }
 
 @media only screen and (max-width: 600px) {
