--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -2,6 +2,7 @@ body{
   margin:-8px;
   font-family: Arial, Helvetica, sans-serif;
   color: #D3D3D3;
+  overflow-x: hidden;
 }
 
 .centered-flex-item{
@@ -20,7 +21,6 @@ html{
 
 .header{
   display: flex;
-  justify-content: flex-end;
   gap: 30px;
   padding:20px;
   position: fixed;
@@ -70,6 +70,10 @@ html{
   display: flex;
   flex-direction: column;
   justify-content:  center;
+}
+
+.about-left-side{
+  padding-left:80px;
 }
 
 .name{
@@ -124,7 +128,6 @@ html{
   position: absolute;
   visibility: hidden;
   top:27px;
-  /*width:112px;*/
   background-color: #61758E;
   font-size: 14px;
   padding:5px;
