--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -178,7 +178,7 @@ html{
   }
 }
 
-@media only screen and (max-width:850px){
+@media only screen and (max-width:850px) and (min-width:701px){
   .about-photo{
     height: 280px;
   }
