--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -18,78 +18,82 @@ html{
   font-style: italic;
 }
 
-
-.contact-sidebar-hidden{
-  position: fixed;
-  right:20px;
-  top: 50vh;
-  transform: translate(50vw,-50%);
+.contact-bar{
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  row-gap: 10px;
-  transition: transform 0.3s;
-  padding:7px;
-  border-radius: 7px;
+  transition: 0.2s linear;
+  column-gap: 20px;
+  margin-right: 15px;
 }
 
-.contact-sidebar-visible{
-  position: fixed;
-  right:20px;
-  top: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 10px;
-  transform: translate(0,-50%);
-  transition: transform 0.3s;
-  padding:7px;
-  border-radius: 7px;
+.contact-bar-hidden{
+  transform: translateY(-1vw);
+  opacity: 0;
 }
 
-
-.contact-sidebar-visible svg,.contact-sidebar-hidden svg{
-  width: 30px;
-  opacity: 0.5;
-}
-
-.contact-sidebar-visible svg:hover,.contact-sidebar-hidden svg:hover{
+.contact-bar-visible{
+  transform: translateY(0);
   opacity: 1;
 }
 
-.contact-sidebar-hover-item{
+.contact-bar svg{
+  height: 30px;
+  opacity: 0.5;
+}
+
+.contact-bar svg:hover{
+  opacity: 1;
+}
+
+.contact-bar-hover-item{
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.contact-sidebar-hover-item span{
+.contact-bar-hover-item span{
   position: absolute;
-  right:45px;
-  font-size: 12px;
-  text-wrap: nowrap;
+  top:38px;
   visibility: hidden;
+  text-wrap: nowrap;
+  font-size: 15px ;
+  color:black;
+  background-color: #4C6E70;
+  padding: 7px;
+  border-radius: 10px;
 }
 
-.contact-sidebar-hover-item:hover span{
+.contact-bar-hover-item:hover span{
   visibility: visible;
 }
 
 @media only screen and (max-width:600px){
-  .contact-sidebar-visible, .contact-sidebar-hidden{
-    visibility: hidden;
-  }
+
+.contact-bar{
+  margin-right:5px;
+  column-gap: 10px;
+}
+
+.contact-bar svg{
+  height: 18px;
+}
+
+.contact-bar-hover-item span{
+  top: 28px;
+  font-size: 10px;
+}
+
 }
 
 @media only screen and (min-width:2500px){
-  .contact-sidebar-visible{
-    right:50px;
-  }
+
 }
 
 .header{
   display: flex;
-  gap: 30px;
+  justify-content: space-between;
   padding:20px;
   position: fixed;
   top:0;
@@ -98,6 +102,11 @@ html{
   backdrop-filter: blur(5px);
   animation: entranceDown 1s;
   z-index: 10;
+}
+
+.header-left{
+  display: flex;
+  column-gap: 30px;
 }
 
 .header-item{
@@ -115,8 +124,13 @@ html{
 }
 
 @media only screen and (max-width: 600px) {
+
+  .header-left{
+    column-gap: 5px;
+  }
+
   .header-item{
-    font-size:20px;
+    font-size:13px;
   }
 }
 
