--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -25,20 +25,7 @@ html{
   transition: 0.5s linear;
   column-gap: 20px;
   margin-right: 15px;
-}
-
-.contact-item{
-  transition: 0.1s ease-in-out;
-}
-
-.contact-item:nth-child(2){
-  transition-delay: 0.1s;
-}
-.contact-item:nth-child(3){
-  transition-delay: 0.2s;
-}
-.contact-item:nth-child(4){
-  transition-delay: 0.3s;
+  transition: 0.2s ease-in-out;
 }
 
 .contact-bar-hidden{
@@ -108,7 +95,7 @@ html{
 .header{
   display: flex;
   justify-content: space-between;
-  padding:20px;
+  padding:10px 20px;
   position: fixed;
   top:0;
   right:0;
@@ -135,6 +122,10 @@ html{
 
 .header-item:hover{
   background-color: #7C8FA6;
+}
+
+.background-gray{
+  background-color: #61758E;
 }
 
 @media only screen and (max-width: 600px) {
