changed png to pdf, fixed scroll position of projects,changed arrow size for mobile

--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -339,6 +339,11 @@ html{
   stroke-dashoffset: 0;
 }
 
+@media only screen and (max-width:600px){
+  .arrow-container svg{
+    height: 50px;
+  }
+}
 
 .projects{
   display: flex;
