--- a/portfolio-page/src/App.css
+++ b/portfolio-page/src/App.css
@@ -2,6 +2,7 @@ body{
   margin:-8px;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  overflow-x: hidden
 }
 
 .centered-flex-item{
